<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addEventFragment"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true">

    <TextView
        android:id="@+id/prof_name"
        android:layout_width="wrap_content"
        android:textSize="40px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="384dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/event_name_text"
        android:hint="Event Name"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/event_description_text"
        android:layout_gravity="center_horizontal"
        android:hint="Enter Description of Event"
        android:layout_weight="0.56"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Discard"
        android:id="@+id/discardButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/submitButton"
        android:layout_marginBottom="48dp"
        android:background="#02acee"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submitButton"
        android:background="#02acee"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/discardButton"
        android:layout_centerHorizontal="true" />


</RelativeLayout>