<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/dashboard_fragment"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/prof_name"
        android:layout_width="wrap_content"
        android:textSize="40px"
        android:layout_height="80px"
        android:visibility="gone"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Add a Parking Location"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#02acee"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/name_text"
        android:hint="Name"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/spaces_text"
        android:hint="Number of Spaces"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/cost_text"
        android:hint="Cost per Space"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/open_text"
        android:hint="Opening Time"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:id="@+id/closing_text"
        android:hint="Closing Time"
        android:layout_gravity="center" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_of_parking"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Latitude: "
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/latText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Longitude:"
            android:id="@+id/lonText" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <ImageView
            android:id="@+id/tweet"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_margin="10px"
            android:src="@drawable/tweet_button"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/signout"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_margin="10px"
            android:src="@drawable/signout_button"
            android:layout_gravity="center" />
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Event to Nearby Location"
        android:id="@+id/event_button"
        android:padding="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="#02acee"
        android:textColor="#fafafa"
        android:layout_marginTop="10dp" />

    <ImageView
            android:id="@+id/prof_image"
            android:layout_width="30px"
            android:visibility="gone"
            android:layout_height="30px"/>

</LinearLayout>